--- a/index.html
+++ b/index.html
@@ -12,32 +12,34 @@
     <h5>Calculator</h5>
     <div class="content">
         <input type="text" id="screen">
+        <button onclick="clearDisplay()" id="clr" >AC</button>
         <div class="row1">
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>/</button>
+            <button onclick="buttonClick(7)" class="btn">7</button>
+            <button onclick="buttonClick(8)" class="btn">8</button>
+            <button onclick="buttonClick(9)" class="btn">9</button>
+            <button onclick="buttonClick('/')" class="btn">/</button>
         </div>
         <div class="row2">
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>x</button>
+            <button onclick="buttonClick(4)" class="btn">4</button>
+            <button onclick="buttonClick(5)" class="btn">5</button>
+            <button onclick="buttonClick(6)" class="btn">6</button>
+            <button onclick="buttonClick('*')" class="btn">x</button>
         </div>
         <div class="row3">
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>-</button>
+            <button onclick="buttonClick(1)" class="btn">1</button>
+            <button onclick="buttonClick(2)" class="btn">2</button>
+            <button onclick="buttonClick(3)" class="btn">3</button>
+            <button onclick="buttonClick('-')" class="btn">-</button>
         </div>
         <div class="row4">
-            <button>0</button>
-            <button>.</button>
-            <button>=</button>
-            <button>+</button>
+            <button onclick="buttonClick('.')" class="btn">.</button>
+            <button onclick="buttonClick(0)" class="btn">0</button>
+            <button onclick="buttonClick('+')" class="btn">+</button>
+            <button onclick="equalClick('=')" class="btn">=</button>
+            
         </div>
     </div>
     </div>
 </body>
-<script src="calculator.js"></script>
+<script src="script.js"></script>
 </html>
